--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,4 @@ freeline_project_description.json
 /app/src/main/res/drawable/Thumbs.db
 /app/src/main/res/values/ids.xml
 /.idea/navEditor.xml
+/app/release/
