--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,13 @@ allprojects {
         jcenter()
         maven { url "https://jitpack.io" }
     }
+
+    gradle.projectsEvaluated {
+        tasks.withType(JavaCompile) {
+            options.compilerArgs << "-Xmaxerrs" << "4000"
+            options.compilerArgs << "-Xmaxwarns" << "4000"
+        }
+    }
 }
 
 task clean(type: Delete) {
