--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,11 +32,13 @@
         </activity>
         <activity
             android:name=".feature.about.AboutActivity"
-            android:theme="@style/UTheme.Translucent.About"/>
+            android:theme="@style/UTheme.Translucent.About" />
 
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
+
+        <activity android:name=".feature.siecomp.SiecompActivity"></activity>
     </application>
 
 </manifest>
