--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,5 @@ freeline_project_description.json
 /app/src/main/res/values/ids.xml
 /.idea/navEditor.xml
 /app/release/
+/.idea/copyright/profiles_settings.xml
+/.idea/copyright/UNES.xml
