--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:2.0.0-rc01"
     implementation "androidx.lifecycle:lifecycle-common-java8:2.0.0-rc01"
     implementation "androidx.room:room-runtime:2.0.0-rc01"
+    implementation 'com.android.support:appcompat-v7:28.0.0-rc02'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     kapt "androidx.room:room-compiler:2.0.0-rc01"
     implementation "android.arch.work:work-runtime:1.0.0-alpha04"
     implementation "android.arch.work:work-firebase:1.0.0-alpha04"
@@ -121,6 +123,11 @@ dependencies {
     api "com.jakewharton.threetenabp:threetenabp:1.1.0"
     implementation "com.google.android:flexbox:0.3.2"
     implementation "androidx.core:core-ktx:1.0.0-rc02"
+
+    implementation 'com.github.bumptech.glide:glide:4.8.0-SNAPSHOT'
+    kapt 'com.github.bumptech.glide:compiler:4.8.0-SNAPSHOT'
+
+    implementation "com.airbnb.android:lottie:2.5.6"
 }
 
 apply from: "../artifacts.gradle"
