--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@
 # The setting is particularly useful for tweaking memory settings.
 org.gradle.jvmargs=-Xmx1536m
 
-version=6.4.0
+version=6.4.1-development
 android.enableD8=true
 android.useAndroidX=true
 android.enableJetifier=true
