--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@
 # The setting is particularly useful for tweaking memory settings.
 org.gradle.jvmargs=-Xmx1536m
 
-version=6.6.0-RC01
+version=6.6.0
 android.enableD8=true
 
 # When configured, Gradle will run in incubating parallel mode.
