--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ android {
         }
     }
     lintOptions {
-        abortOnError false
+        abortOnError true
     }
     compileOptions {
         targetCompatibility 1.8
