--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,7 +54,9 @@ dependencies {
     implementation "android.arch.persistence.room:runtime:1.1.1"
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
 
-    implementation("android.arch.work:work-runtime:1.0.0-beta01")
+    implementation("android.arch.work:work-runtime:1.0.0-beta01") {
+        exclude group: 'com.google.guava', module: 'listenablefuture'
+    }
 
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
