--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,7 +54,7 @@ dependencies {
     implementation "android.arch.persistence.room:runtime:1.1.1"
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
 
-    implementation("android.arch.work:work-runtime:1.0.0-beta04") {
+    implementation("android.arch.work:work-runtime:1.0.0") {
         exclude group: 'com.google.guava', module: 'listenablefuture'
     }
 
